created contact module

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,6 +158,20 @@
     background-size: cover;
 }
 
+.contact-hero-header {
+    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/contact.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.about-hero-header {
+    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/about-us.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .hero-header img {
     animation: imgRotate 50s linear infinite;
 }
